--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -145,6 +145,11 @@ a.footer.link:hover {
   font-size: $font-size !important;
 }
 
+
+.accordion-list {
+  padding-left: 10px;
+}
+
 .accordion-list-item {
   font-size: $font-size-accordion-item;
   margin-top: 20px;
@@ -158,6 +163,10 @@ a.accordion-list-item {
 
 a.accordion-list-item:hover {
   color: $link-hover-color;
+}
+
+.accordion-list-item > i {
+  font-size: $font-size-accordion-item;
 }
 
 #social-footer{
