--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
                 <div class="col-xl-12">
                     <div class="text-center">
                         {% if page.image != "None" %}
-                            <img src="/assets/images/Photos/{{ page.image }}" class="rounded-circle" alt="{{ page.title }}">
+                            <img src="/assets/images/Photos/{{ page.image }}" class="rounded-circle header-image" alt="{{ page.title }}">
                         {% endif %}
                     </div>
                     <h1 class="h1 mt-3">{{ page.title }}</h1>
